# langchain-studio

./: .gitignore  .pre-commit-config.yaml  Dockerfile.Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  locustfile.py  pyproject.toml
backend/app/: main.py
backend/app/agent/: sql_agent.py
backend/app/api/: middleware.py  router.py
backend/app/chain/: retrieval_qa.py
backend/app/core/: config.py  exceptions.py  llm_factory.py
backend/app/memory/: session_manager.py
backend/app/retrieval/: vector_store.py
backend/app/service/: __init__.py  chat_service.py
backend/docs/: requirements.md
backend/practice/: README.md
backend/practice/agent/: 01_agent_components.py  02_react_agent.py  03_planning_cot_tot.py  04_memory_system.py  05_tool_use_function_call.py  06_multi_agent.py  07_agent_safety.py
backend/practice/rag/: 01_rag_pipeline.py  02_chunking_strategies.py  03_advanced_retrieval.py  04_lost_in_middle.py  05_rag_evaluation.py  06_adaptive_rag.py
backend/scripts/: generate_dummy_data.py  ingest.py
backend/tests/: test_api.py
data/: doc_001.md  doc_002.md  doc_003.md  doc_004.md  doc_005.md  doc_006.md  doc_007.md  doc_008.md  doc_009.md  doc_010.md  doc_011.md  doc_012.md  doc_013.md  doc_014.md  doc_015.md  doc_016.md  doc_017.md  doc_018.md  doc_019.md  doc_020.md  doc_021.md  doc_022.md  doc_023.md  doc_024.md  doc_025.md  doc_026.md  doc_027.md  doc_028.md  doc_029.md  doc_030.md  doc_031.md  doc_032.md  doc_033.md  doc_034.md  doc_035.md  doc_036.md  doc_037.md  doc_038.md  doc_039.md  doc_040.md  (+60 more)
docs/: architecture.md  developer_manual.md  requirements.md
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.jsx
scripts/: ingest.py
web/: package.json
