[virtualenvs]
in-project = true

[project]
name = "langchain-demo"
version = "0.1.0"
description = "A comprehensive LangChain project covering full lifecycle."
authors = [
    {name = "海明", email = "jxtc163@163.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.0.38",
    "langchain-core>=0.1.52",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "chromadb>=0.5.0",
    "pgvector>=0.2.5",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.4",
    "pydantic>=2.7.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.30",
    "tiktoken>=0.7.0",
    "sse-starlette>=2.1.0",
    "myapplication (>=0.1.0,<0.2.0)",
    "retrieval (>=0.0.1.dev6,<0.0.2)",
    "locust (>=2.43.3,<3.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-mock>=3.14.0",
    "locust>=2.27.0",
    "black>=24.4.2",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "testcontainers>=4.5.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
ignore_missing_imports = true
